--- a/stories/es/0201_el-niño-burro_slides.html
+++ b/stories/es/0201_el-niño-burro_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Mi Libro Ilustrado - Global African Storybook</title>
+  <title>El Niño Burro - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="mi-libro-ilustrado" class="slide level1">
-<h1>Mi Libro Ilustrado</h1>
+<section id="el-niño-burro" class="slide level1">
+<h1>El Niño Burro</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/02.jpg" /></p>
-<p>Una chica</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/02.jpg" /></p>
+<p>Una niña pequeña fue la primera en ver una figura misteriosa a lo lejos.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/03.jpg" /></p>
-<p>Un ave</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/03.jpg" /></p>
+<p>Mientras la figura se acercaba, la niña se dio cuenta que era una mujer embarazada a punto de dar a luz.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/04.jpg" /></p>
-<p>Un león</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/04.jpg" /></p>
+<p>Tímida pero valientemente, la pequeña niña se acercó a la mujer. &quot;Tenemos que cuidar de ella,&quot; decidieron los familiares de la niña pequeña. &quot;Ella y su bebé estarán a salvo con nosotros&quot;.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/05.jpg" /></p>
-<p>Un gato</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/05.jpg" /></p>
+<p>Al poco tiempo, el bebé empezó a nacer. &quot;¡Puja!&quot; &quot;¡Traigan mantas!&quot; &quot;¡Agua!&quot; &quot;¡¡¡Puuuuujjjjjaaa!!!</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,12 +132,156 @@
 </section>
 <section class="slide level1">
 
-<h2 id="mi-libro-ilustrado-1">Mi Libro Ilustrado</h2>
-<strong>Texto:</strong> Oku Modesto<br> <strong>Ilustración:</strong> Rob Owen, Marleen Visser, Katrien Coetzer, Wiehan de Jager, Karen Lilje, Catherine Groenewald, Alice Toich<br> <strong>Traducción:</strong> Karina Vásquez<br> <strong>Idioma:</strong> Español<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/06.jpg" /></p>
+<p>Pero cuando vieron al recién nacido, todos se llevaron una gran sorpresa. &quot;¡¿Un burro?!&quot;</p>
+<center>
+<strong>5</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/07.jpg" /></p>
+<p>Todos empezaron a discutir. &quot;Prometimos que cuidaríamos de la madre y su hijo, y eso es lo que haremos,&quot; decían algunos. &quot;¡Pero ellos nos van a traer mala suerte!&quot; decían otros.</p>
+<center>
+<strong>6</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/08.jpg" /></p>
+<p>Y así fue como la madre volvió a quedar sola otra vez. Se preguntaba qué hacer con este extraño bebé. Se preguntaba qué hacer consigo misma.</p>
+<center>
+<strong>7</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/09.jpg" /></p>
+<p>Pero finalmente tuvo que aceptar que ese era su bebé y que ella era su madre.</p>
+<center>
+<strong>8</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/10.jpg" /></p>
+<p>Pero si el niño se hubiera quedado del mismo tamaño, todo habría sido diferente. Porque el niño burro creció y creció hasta que su madre no pudo cargarlo más en su espalda. Y no importaba cuánto lo intentase, el niño burro no lograba comportarse como un niño humano. Su madre pasaba cansada y frustrada. A veces ella le ordenaba hacer trabajo de animales.</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/11.jpg" /></p>
+<p>Burro sentía cada vez más confusión y rabia. Que no podía hacer esto, que no podía hacer aquello. Que él no podía ser esto ni aquello. Un día se puso tan furioso que botó a su madre al suelo de una patada.</p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/12.jpg" /></p>
+<p>Burro se sintió lleno de vergüenza. Empezó a arrancarse tan rápido y lejos como pudo.</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/13.jpg" /></p>
+<p>Cuando dejó de correr, ya era de noche y Burro estaba perdido. &quot;¿Ija?&quot; susurró en la oscuridad. &quot;¿Ija?&quot; le respondió su eco. Estaba solo. Se acurrucó y cayó rendido en un sueño profundo e intranquilo.</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/14.jpg" /></p>
+<p>Cuando Burro despertó, había un extraño anciano mirándolo. Burro le miró a los ojos y comenzó a sentir una chispa de esperanza.</p>
+<center>
+<strong>13</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/15.jpg" /></p>
+<p>Burro se fue a vivir con el anciano, quien le enseñó muchas formas diferentes de sobrevivir. Burro escuchaba y aprendía, y lo mismo hacía el anciano. Se ayudaban y reían juntos.</p>
+<center>
+<strong>14</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/16.jpg" /></p>
+<p>Una mañana, el anciano le pidio a Burro que lo llevara hasta la cima de una montaña.</p>
+<center>
+<strong>15</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/17.jpg" /></p>
+<p>Se quedaron dormidos más arriba de las nubes. Burro soñó que su madre estaba enferma y que lo llamaba. Y cuando despertó...</p>
+<center>
+<strong>16</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/18.jpg" /></p>
+<p>...las nubes habían desaparecido junto con su amigo, el anciano.</p>
+<center>
+<strong>17</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/19.jpg" /></p>
+<p>Burro finalmente se dio cuenta de lo que tenía que hacer.</p>
+<center>
+<strong>18</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/20.jpg" /></p>
+<p>Burro encontró a su madre, sola y llorando por su hijo perdido. Se quedaron mirándose a los ojos por largo tiempo. Luego se abrazaron muy apretadamente.</p>
+<center>
+<strong>19</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/21.jpg" /></p>
+<p>El hijo burro y su madre ya llevan tiempo creciendo juntos y han aprendido a convivir. Lentamente, otras familias se han instalado a vivir cerca de ellos.</p>
+<center>
+<strong>20</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="el-niño-burro-1">El Niño Burro</h2>
+<strong>Texto:</strong> Lindiwe Matshikiza<br> <strong>Ilustración:</strong> Meghan Judge<br> <strong>Traducción:</strong> Karina Vásquez<br> <strong>Idioma:</strong> Español<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/my-picture-book-0'>here</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/donkey-child'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
