--- a/stories/es/0253_mi-libro-ilustrado.html
+++ b/stories/es/0253_mi-libro-ilustrado.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Mi libro ilustrado</title>
+    <title>Mi Libro Ilustrado</title>
     <meta charset="UTF-8">
     <style type="text/css">
       body {
@@ -43,7 +43,7 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/01.jpg" />
 
-<h1 id="mi-libro-ilustrado">Mi libro ilustrado</h1>
+<h1 id="mi-libro-ilustrado">Mi Libro Ilustrado</h1>
 
 Oku Modesto<br>Español</div><div class="pagebreak">
 
@@ -56,7 +56,7 @@ Oku Modesto<br>Español</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/03.jpg" /></p>
 
-<p>Un pájaro</p>
+<p>Un ave</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
@@ -75,7 +75,7 @@ Oku Modesto<br>Español</div><div class="pagebreak">
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Texto:</strong> Oku Modesto<br /><strong>Ilustración:</strong> Rob Owen, Marleen Visser, Katrien Coetzer, Wiehan de Jager, Karen Lilje, Catherine Groenewald, Alice Toich<br /><strong>Traducción:</strong> Espen Stranger-Johannessen<br /><strong>Idioma:</strong> Español</p>
+<p><strong>Texto:</strong> Oku Modesto<br /><strong>Ilustración:</strong> Rob Owen, Marleen Visser, Katrien Coetzer, Wiehan de Jager, Karen Lilje, Catherine Groenewald, Alice Toich<br /><strong>Traducción:</strong> Karina Vásquez<br /><strong>Idioma:</strong> Español</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/my-picture-book-0">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
