--- a/stories/es/0262_magozwe_slides.html
+++ b/stories/es/0262_magozwe_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Mi Libro Ilustrado - Global African Storybook</title>
+  <title>Magozwe - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="mi-libro-ilustrado" class="slide level1">
-<h1>Mi Libro Ilustrado</h1>
+<section id="magozwe" class="slide level1">
+<h1>Magozwe</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/02.jpg" /></p>
-<p>Una chica</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/02.jpg" /></p>
+<p>En la ajetreada ciudad de Nairobi, lejos de la apacible vida del hogar, vivía un grupo de jóvenes mendigos. Vivían el día a día como si no hubiera futuro. Una mañana, los chicos estaban empacando sus mantas después de dormir en la fría calle . Prendieron una fogata con basura para espantar el frío. Dentro del grupo de jóvenes estaba Magozwe. Era el más joven.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/03.jpg" /></p>
-<p>Un ave</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/03.jpg" /></p>
+<p>Cuando los padres de Magozwe murieron, él sólo tenía cinco años de edad. Se fue a vivir con su tío. Pero Magozwe no le importaba a este hombre. No le daba suficiente comida. Y lo hacía trabajar muy duro.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/04.jpg" /></p>
-<p>Un león</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/04.jpg" /></p>
+<p>Si Magozwe se quejaba o hacía preguntas, su tío le daba una golpiza. Cuando Magozwe le preguntó si podía ir a la escuela, su tío lo golpeó y le dijo, &quot;eres demasiado estúpido para aprender&quot;. Después de tres años de vivir así, Magozwe se escapó de la casa de su tío. Empezó a vivir en la calle.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/05.jpg" /></p>
-<p>Un gato</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/05.jpg" /></p>
+<p>La vida en la calle era difícil y muchos de los niños tenían dificultades para conseguir comida día a día. Algunas veces los arrestaban, otras veces les daban golpizas. Cuando se enfermaban, no tenían quién los ayudara. El grupo de jóvenes dependía de lo poco que recibían mendigando, de la venta de plásticos y del reciclaje. La vida era aun más difícil por las peleas con grupos rivales que querían tener el control de ciertas partes de la ciudad.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,12 +132,120 @@
 </section>
 <section class="slide level1">
 
-<h2 id="mi-libro-ilustrado-1">Mi Libro Ilustrado</h2>
-<strong>Texto:</strong> Oku Modesto<br> <strong>Ilustración:</strong> Rob Owen, Marleen Visser, Katrien Coetzer, Wiehan de Jager, Karen Lilje, Catherine Groenewald, Alice Toich<br> <strong>Traducción:</strong> Karina Vásquez<br> <strong>Idioma:</strong> Español<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/06.jpg" /></p>
+<p>Un día, Magozwe estaba escarbando los basureros y encontró un libro de cuentos viejo y destrozado. Le quitó el polvo y lo guardó en su bolsa. Todos los días, sacaba el libro y miraba las ilustraciones. Pero no sabía cómo leer las palabras.</p>
+<center>
+<strong>5</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/07.jpg" /></p>
+<p>Las ilustraciones contaban la historia de un chico que creció y se convirtió en piloto. Magozwe fantaseaba con ser piloto. A veces, se imaginaba que él era el chico de la historia.</p>
+<center>
+<strong>6</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/08.jpg" /></p>
+<p>Hacía frío y Magozwe estaba mendigando en la calle. Un hombre se le acercó. &quot;Hola, soy Tomás. Trabajo cerca de acá, en un lugar donde podemos darte comida,&quot; dijo el hombre. Apuntó hacia una casa amarilla con techo azul. &quot;Ojalá vayas pronto a buscar comida&quot; le dijo. Magozwe miró al hombre, y después miró la casa. &quot;Quizá&quot;, dijo, y se fue.</p>
+<center>
+<strong>7</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/09.jpg" /></p>
+<p>Con el paso de los meses, los jóvenes mendigos se acostumbraron a la presencia de Tomás. Él disfrutaba hablar con la gente, especialmente con los mendigos. Tomás escuchaba las historias de sus vidas. Era serio y paciente, nunca maleducado ni irrespetuoso. Algunos de los chicos empezaron a ir a la casa amarilla y azul a buscar comida al mediodía.</p>
+<center>
+<strong>8</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/10.jpg" /></p>
+<p>Magozwe estaba sentado en la calle mirando su libro cuando Tomás vino y se sentó a su lado. &quot;¿De qué trata la historia?&quot; preguntó Tomás. &quot;Trata sobre un chico que se convierte en piloto,&quot; respondió Magozwe. &quot;¿Cómo se llama el niño?&quot; preguntó Tomás. &quot;No sé porque no sé leer,&quot; dijo Magozwe en voz baja.</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/11.jpg" /></p>
+<p>Cuando volvieron a reunirse, Magozwe le relató la historia de su vida a Tomás. Le habló de su tío y de por qué huyó de esa casa. Tomás no hablaba mucho, y no le decía a Magozwe qué hacer, pero siempre le escuchaba con atención. Algunas veces conversaban mientras comían en la casa del techo azul.</p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/12.jpg" /></p>
+<p>Cuando Magozwe cumplió alrededor de diez años, Tomás le regaló un nuevo libro de cuentos. Era la historia de un niño de una aldea que creció y se convirtió en un famoso jugador de fútbol. Tomás leyó esa historia a Magozwe en muchas ocasiones, hasta que un día le dijo, &quot;creo que ya es tiempo que vayas a la escuela y aprendas a leer. ¿Qué te parece?&quot; Tomás le explicó que conocía un lugar donde los niños podían vivir e ir a la escuela.</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/13.jpg" /></p>
+<p>Magozwe pensó en este nuevo lugar y en ir a la escuela. Pero, ¿y si su tío tenía razón y era demasiado estúpido para aprender? ¿Y si volvían a darle golpizas en este nuevo lugar? Magozwe sintió miedo. &quot;Quizá sea mejor seguir viviendo en la calle,&quot; pensó.</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/14.jpg" /></p>
+<p>Magozwe le habló de sus miedos a Tomás. Con el paso del tiempo, Tomás pudo asegurarle al chico que su vida iba a ser mejor en ese nuevo lugar.</p>
+<center>
+<strong>13</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/15.jpg" /></p>
+<p>Y así fue como Magozwe se fue a vivir a una habitación en una casa con techo verde. Compartía su habitación con otros dos chicos. Había un total de diez chicos viviendo en esa casa. Vivían junto la tía Cissy y su esposo, tres perros, un gato y una vieja cabra.</p>
+<center>
+<strong>14</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/16.jpg" /></p>
+<p>Magozwe empezó la escuela y fue difícil. Tenía mucho con qué ponerse al día. Muchas veces quiso rendirse. Pero pensaba en el piloto y en el jugador de fútbol de los libros. Al igual que ellos, Magozwe no se rindió.</p>
+<center>
+<strong>15</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/17.jpg" /></p>
+<p>Magozwe estaba sentado en el patio de la casa del techo verde, leyendo un libro de cuentos de su escuela. Tomás se le acercó y se sentó junto a él. &quot;¿De qué trata la historia?&quot; preguntó Tomás. &quot;Trata sobre un chico que se convierte en profesor,&quot; respondió Magozwe. &quot;¿Cómo se llama el chico?&quot; preguntó Tomás. &quot;Su nombre es Magozwe,&quot; dijo Magozwe sonriendo.</p>
+<center>
+<strong>16</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="magozwe-1">Magozwe</h2>
+<strong>Texto:</strong> Lesley Koyi<br> <strong>Ilustración:</strong> Wiehan de Jager<br> <strong>Traducción:</strong> Karina Vásquez<br> <strong>Idioma:</strong> Español<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/my-picture-book-0'>here</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/magozwe-0'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
