--- a/stories/index.html
+++ b/stories/index.html
@@ -3055,10 +3055,34 @@
       <td><a name="es0291"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0294</td>
+      <td><a href="/stories/es/0294_las-bananas-de-mi-abuela_slides.html" target="_blank">Las bananas de mi abuela</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsR1hRTjZOMERIeUU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="es0294"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0296</td>
+      <td><a href="/stories/es/0296_tom-el-vendedor-de-bananas_slides.html" target="_blank">Tom, el vendedor de bananas</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsR1hRTjZOMERIeUU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="es0296"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0302</td>
       <td><a href="/stories/es/0302_el-fuego_slides.html" target="_blank">El fuego</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsR1hRTjZOMERIeUU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="es0302"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0315</td>
+      <td><a href="/stories/es/0315_la-canción-de-sakima_slides.html" target="_blank">La canción de Sakima</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsR1hRTjZOMERIeUU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="es0315"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0324</td>
+      <td><a href="/stories/es/0324_el-día-que-dejé-mi-casa-para-irme-a-la-ciudad_slides.html" target="_blank">El Día que dejé mi casa para irme a la ciudad</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsR1hRTjZOMERIeUU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="es0324"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0327</td>
@@ -3067,10 +3091,22 @@
       <td><a name="es0327"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0337</td>
+      <td><a href="/stories/es/0337_niños-de-cera_slides.html" target="_blank">Niños de cera</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsR1hRTjZOMERIeUU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="es0337"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0341</td>
       <td><a href="/stories/es/0341_antoni-ke-bo-mang-bale_slides.html" target="_blank">Antoni ke bo mang bale</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsR1hRTjZOMERIeUU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="es0341"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0342</td>
+      <td><a href="/stories/es/0342_castigo_slides.html" target="_blank">Castigo</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsR1hRTjZOMERIeUU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="es0342"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
   </tbody>
 </table>
@@ -3995,13 +4031,13 @@
       <td>0294</td>
       <td><a href="http://my.africanstorybook.org/stories/grandma%E2%80%99s-bananas">Grandma’s bananas</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0294">ar</a>, <a href="#ko0294">ko</a>, <a href="#ne0294">ne</a>, <a href="#pa0294">pa</a>, <a href="#tl0294">tl</a>, <a href="#zh0294">zh</a></td>
+      <td><a href="#ar0294">ar</a>, <a href="#es0294">es</a>, <a href="#ko0294">ko</a>, <a href="#ne0294">ne</a>, <a href="#pa0294">pa</a>, <a href="#tl0294">tl</a>, <a href="#zh0294">zh</a></td>
     </tr>
     <tr>
       <td>0296</td>
       <td><a href="http://my.africanstorybook.org/stories/tom-banana-seller">Tom the banana seller</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0296">ar</a>, <a href="#ko0296">ko</a>, <a href="#pa0296">pa</a>, <a href="#tl0296">tl</a>, <a href="#zh0296">zh</a></td>
+      <td><a href="#ar0296">ar</a>, <a href="#es0296">es</a>, <a href="#ko0296">ko</a>, <a href="#pa0296">pa</a>, <a href="#tl0296">tl</a>, <a href="#zh0296">zh</a></td>
     </tr>
     <tr>
       <td>0302</td>
@@ -4037,7 +4073,7 @@
       <td>0315</td>
       <td><a href="http://my.africanstorybook.org/stories/sakima%E2%80%99s-song">Sakima’s song</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0315">ar</a>, <a href="#ko0315">ko</a>, <a href="#pa0315">pa</a>, <a href="#tl0315">tl</a>, <a href="#zh0315">zh</a></td>
+      <td><a href="#ar0315">ar</a>, <a href="#es0315">es</a>, <a href="#ko0315">ko</a>, <a href="#pa0315">pa</a>, <a href="#tl0315">tl</a>, <a href="#zh0315">zh</a></td>
     </tr>
     <tr>
       <td>0319</td>
@@ -4055,7 +4091,7 @@
       <td>0324</td>
       <td><a href="http://my.africanstorybook.org/stories/day-i-left-home-city">Day I left home for the city</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0324">ar</a>, <a href="#ko0324">ko</a>, <a href="#pa0324">pa</a>, <a href="#tl0324">tl</a>, <a href="#zh0324">zh</a></td>
+      <td><a href="#ar0324">ar</a>, <a href="#es0324">es</a>, <a href="#ko0324">ko</a>, <a href="#pa0324">pa</a>, <a href="#tl0324">tl</a>, <a href="#zh0324">zh</a></td>
     </tr>
     <tr>
       <td>0327</td>
@@ -4073,7 +4109,7 @@
       <td>0337</td>
       <td><a href="http://my.africanstorybook.org/stories/children-wax">Children of wax</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0337">ar</a>, <a href="#ko0337">ko</a>, <a href="#nl0337">nl</a>, <a href="#nn0337">nn</a>, <a href="#no0337">no</a>, <a href="#pa0337">pa</a>, <a href="#tl0337">tl</a>, <a href="#zh0337">zh</a></td>
+      <td><a href="#ar0337">ar</a>, <a href="#es0337">es</a>, <a href="#ko0337">ko</a>, <a href="#nl0337">nl</a>, <a href="#nn0337">nn</a>, <a href="#no0337">no</a>, <a href="#pa0337">pa</a>, <a href="#tl0337">tl</a>, <a href="#zh0337">zh</a></td>
     </tr>
     <tr>
       <td>0341</td>
@@ -4085,7 +4121,7 @@
       <td>0342</td>
       <td><a href="http://my.africanstorybook.org/stories/punishment">Punishment</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0342">ar</a>, <a href="#ko0342">ko</a>, <a href="#pa0342">pa</a>, <a href="#tl0342">tl</a>, <a href="#zh0342">zh</a></td>
+      <td><a href="#ar0342">ar</a>, <a href="#es0342">es</a>, <a href="#ko0342">ko</a>, <a href="#pa0342">pa</a>, <a href="#tl0342">tl</a>, <a href="#zh0342">zh</a></td>
     </tr>
     <tr>
       <td>0359</td>
