--- a/audio/index.html
+++ b/audio/index.html
@@ -102,6 +102,7 @@
             <li><a href="no/0009_hvor-er-katten-min_audio-slides.html" target="_blank">Hvor er katten min</a></li>
             <li><a href="no/0067_å-lage-mat_audio-slides.html" target="_blank">Å lage mat</a></li>
             <li><a href="no/0073_å-telle-dyr_audio-slides.html" target="_blank">Å telle dyr</a></li>
+            <li><a href="no/0087_jeg-liker-å-lese_audio-slides.html" target="_blank">Jeg liker å lese</a></li>
             <li><a href="no/0095_zama-er-flink_audio-slides.html" target="_blank">Zama er flink</a></li>
             <li><a href="no/0112_kroppen-min_audio-slides.html" target="_blank">Kroppen min</a></li>
             <li><a href="no/0126_skyer_audio-slides.html" target="_blank">Skyer</a></li>
