--- a/audio/index.html
+++ b/audio/index.html
@@ -114,10 +114,14 @@
             <li><a href="no/0271_to_audio-slides.html" target="_blank">To</a></li>
             <li><a href="no/0287_herr-flue-og-herr-storhode_audio-slides.html" target="_blank">Herr Flue og herr Storhode</a></li>
           </ul>
-        <h3><a name="nn"></a>Norwegian (Nynorsk)</h3>
+        <h3><a name="nn"></a>Norwegian (Nynorsk) [nynorsk]</h3>
           <ul>
             <li><a href="nn/0001_ein-veldig-høg-mann_audio-slides.html" target="_blank">Ein veldig høg mann</a></li>
             <li><a href="nn/0003_skuleklede_audio-slides.html" target="_blank">Skuleklede</a></li>
+            <li><a href="nn/0008_kva-gjer-du_audio-slides.html" target="_blank">Kva gjer du?</a></li>
+            <li><a href="nn/0009_kor-er-katten-min_audio-slides.html" target="_blank">Kor er katten min?</a></li>
+            <li><a href="nn/0073_å-telja-dyr_audio-slides.html" target="_blank">Å telja dyr</a></li>
+            <li><a href="nn/0095_zama_er_flink_audio-slides.html" target="_blank">Zama er flink!</a></li>
           </ul>
         <h3><a name="fa"></a>Persian [فارسی]</h3>
           <ul>
