--- a/imagebank/index.html
+++ b/imagebank/index.html
@@ -90,6 +90,7 @@
         <option value="lwg">Oluwanga</option>
         <option value="fa">Persian</option>
         <option value="pt">Portuguese</option>
+        <option value="pa">Punjabi</option>
         <option value="nyn">Runyankore</option>
         <option value="ru">Russian</option>
         <option value="ttj">Rutooro</option>
@@ -104,6 +105,7 @@
         <option value="tl">Tagalog</option>
         <option value="ve">Tshivenda</option>
         <option value="aeb">Tunisian Arabic</option>
+        <option value="vi">Vietnamese</option>
         <option value="ts">Xitsonga</option>
         <option value="tsc">Xitswa</option>
         <option value="yo">Yoruba</option>
